# phd2-alpaca-indi

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  INDIGO_WINDOWS_PORT.md  Info.plist.in  README-PHD2.txt.in  README.md  RELEASE-NOTES-2.0.0.md  build-deb.sh  build-dmg.sh  build-exe.ps1  openastro-phd2.appdata.xml  openastro-phd2.desktop  phd2-x64.iss.in  phd2.appdata.xml  phd2.iss.in  phd2.sh.in  run_cmake.bat  run_deb.sh  run_dmg.sh  run_exe.bat  run_phd2_macos  run_win.bat  version.md
.claude/commands/: commit.md  release.md
cmake_modules/: FindINDIGO.cmake  PHD2Packaging.cmake  compiler_options.cmake
contributions/MPI_IS_gaussian_process/: CMakeLists.txt
contributions/MPI_IS_gaussian_process/tests/gaussian_process/: gaussian_process_test.cpp
debian/: changelog  control  openastro-phd2.postinst  openastro-phd2.postrm  openastro-phd2.service  phd2-alpaca.postinst  phd2-alpaca.postrm  phd2-alpaca.service  rules
icons/: AppIcon.icns
scripts/webui/: index.html
src/: Refine_DefMap.cpp  about_dialog.cpp  alpaca_discovery.cpp  backlash_comp.cpp  calibration_assistant.cpp  calreview_dialog.cpp  calstep_dialog.cpp  cam_alpaca.cpp  cam_alpaca.h  cam_ascom.cpp  cam_ascom.h  cam_indi.cpp  cam_indigo.cpp  cam_indigo.h  camcal_import_dialog.cpp  camera.cpp  camera.h  cameras.h  comdispatch.cpp  comdispatch.h  config_alpaca.cpp  config_indi.cpp  config_indi.h  config_indigo.cpp  config_indigo.h  confirm_dialog.cpp  darks_dialog.cpp  event_server.cpp  gear_dialog.cpp  gear_dialog.h  gear_simulator.cpp  guide_algorithm_gaussian_process.cpp  image_math.cpp  indi_discovery.cpp  indi_discovery.h  indi_gui.cpp  indigo_client_base.cpp  indigo_client_base.h  log_uploader.cpp  manualcal_dialog.cpp  (+28 more)
tests/: CMakeLists.txt  README.md
tests/algorithms/: test_guide_algorithm_math.cpp
tests/alpaca/: test_alpaca_schema.cpp
tests/discovery/: test_discovery_logic.cpp
tests/event_server/: test_jsonrpc_schema.cpp
tests/include/: phd.h
tests/indi/: test_indi_discovery.cpp
tests/json/: test_json_parser.cpp
